# bfg-help

./: .gitignore  HISTORY.md  justfile  main.py  pyproject.toml
source/: buttons.md  cardplay.md  conf.py  history.md  index.rst  introduction.md  modes.md  version.json  your_account.md
