[project]
name = "bfg-help"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.8",
    "recommonmark>=0.7.1",
    "sphinx>=9.0.4",
    "sphinx-bootstrap-theme>=0.8.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-markdown-tables>=0.0.17",
]
